# DERopt_Python

./: .gitignore  README.md  pyproject.toml  pytest.ini
config/: __init__.py  case_config.py
data_loading/: __init__.py  schemas.py  time_subset.py
deropt_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: DEVELOPMENT.md  PLAN.md  deropt_python_pyomo_rebuild.md  extending_the_model.md  implementation_slices_detailed.md
model/: __init__.py  contracts.py  core.py
requirements/: deropt_rebuild_spec.md
run/: __init__.py  build_run_data.py  playground.py
shared/: __init__.py  cost_helpers.py  financials.py
technologies/: __init__.py  alkaline_electrolyzer.py  battery_energy_storage.py  compressed_gas_hydrogen_storage.py  dam_hydro.py  diesel_generation.py  equipment_cost_diagnostics.py  flow_battery_energy_storage.py  gas_turbine.py  high_temperature_fuel_cell.py  hydrokinetic.py  pem_electrolyzer.py  pem_fuel_cell.py  pumped_hydro.py  run_of_river.py  solar_pv.py  wind.py
tests/: __init__.py  test_cost_objective_reporting_split.py  test_customer_charge_horizon.py  test_energy_price_override_keeps_demand_charges.py  test_equipment_cost_diagnostics.py  test_flow_battery_energy_storage_block.py  test_hydrogen_subsystem.py  test_hydrokinetic_block.py  test_load_energy_csv.py  test_model_diagnostics.py  test_overarching_report.py  test_per_node_utility_tariffs.py  test_resource_profiles.py  test_scaffold_imports.py  test_sce_customer_fixed_charges.py  test_solar_pv_per_node_resource.py  test_sub_hourly_unit_consistency.py  (+6 more)
(+60 files in other folders)
